# upstox-python

./: CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP_SUMMARY.md  LICENSE  MANIFEST.in  PUBLISHING_GUIDE.md  README.md  SECURITY.md  Testing.ipynb  install.py  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-review.yml  release.yml
docs/: API_REFERENCE.md
examples/: basic_usage.py  historical_data_v3.py  market_quotes_v3.py  order_management.py  protobuf_decoding_example.py  simple_protobuf_test.py
scripts/: setup_repository.sh
tests/: test_upstox.py
upstox/: __init__.py  exceptions.py  upstox.py
