[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upstox"
version = "1.0.0"
description = "Python client library for Upstox API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Upstox Python Client", email = "support@upstox.com"}
]
maintainers = [
    {name = "Upstox Python Client", email = "support@upstox.com"}
]
keywords = ["upstox", "trading", "api", "finance", "stocks", "mutual funds"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "websocket-client>=1.0.0",
    "six>=1.15.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/upstox/upstox-python"
Documentation = "https://upstox.com/developer/api-documentation/open-api"
Repository = "https://github.com/upstox/upstox-python"
"Bug Tracker" = "https://github.com/upstox/upstox-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["upstox*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "websocket.*",
    "six.*",
    "dateutil.*",
]
ignore_missing_imports = true 